--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -478,3 +478,13 @@
   note = {Accedido: 2024-09-12}
 }
 
+@online{meijomil2024,
+    author    = {Sergio Meijomil},
+    title     = {Qué es un deeplink, para qué sirve y ejemplos},
+    year      = {2024},
+    month     = {February},
+    day       = {6},
+    url       = {https://www.inboundcycle.com/diccionario-marketing-online/deeplink},
+    note      = {Consultado el: 6 de Febrero de 2024}
+}
+
